--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=ec2-13-125-250-5.ap-northeast-2.compute.amazonaws.com
+spring.datasource.url=jdbc:mysql://ec2-13-125-250-5.ap-northeast-2.compute.amazonaws.com/test?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=$@rr!
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.generate-ddl=true
 
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
